refactor: ChartCalculatorService 함수 분리